--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,25 +4,40 @@
             <mat-card-title>Register</mat-card-title>
         </mat-card-header>
 
-        <form class="example-form">
+        <form class="example-form" [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
 
             <mat-card-content>
                 <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Username">
+                    <label>
+                        <input matInput placeholder="Username" formControlName="username" [errorStateMatcher]="matcher">
+                    </label>
+                    <mat-error>
+                        <span *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched">Please enter Username</span>
+                      </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Email">
+                    <label>
+                        <input matInput placeholder="Email" formControlName="email" [errorStateMatcher]="matcher">
+                    </label>
+                    <mat-error>
+                      <span *ngIf="!registerForm.get('email').valid && registerForm.get('email').touched">Please enter Email</span>
+                    </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Password">
+                    <label>
+                        <input matInput placeholder="Password" formControlName="password" [errorStateMatcher]="matcher">
+                    </label>
+                    <mat-error>
+                      <span *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched">Please enter Password</span>
+                    </mat-error>
                 </mat-form-field>
 
             </mat-card-content>
 
             <button mat-raised-button routerLink="/signin" routerLinkActive="activeBtnLink" style="margin-right:5px;">Login</button>
-            <button mat-raised-button routerLink="/register" routerLinkActive="activeBtnLink">Register</button>
+            <button type="submit" [disabled]="!registerForm.valid" mat-raised-button routerLink="/register" routerLinkActive="activeBtnLink">Register</button>
 
         </form>
     </mat-card>
