--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,6 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink="staffs"><mat-icon>supervised_user_circle</mat-icon>Staffs</a>
       <a mat-list-item (click)="logout()"><mat-icon>logout</mat-icon>Logout</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -20,6 +21,7 @@
       </button>
       <span>angular-review-app</span>
     </mat-toolbar>
+    <router-outlet></router-outlet>
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
